--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "airbnb"
+        "plugin:@typescript-eslint/recommended"
     ],
     "overrides": [
     ],
