pull request for master branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,12 @@ on:
     branches: 
       - develop
 
+  pull_request:
+    branches:
+      - master
+
 jobs: 
-  Jest: 
+  run_jest: 
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps: 
