--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "day": "echo src/day1",
     "test": "jest",
     "test:full": "jest DFSOnBST LRU LinearSearchList BinarySearchList TwoCrystalBalls BubbleSort SinglyLinkedList DoublyLinkedList Queue Stack ArrayList MazeSolver QuickSort BTPreOrder BTInOrder BTPostOrder BTBFS CompareBinaryTrees DFSOnBST DFSGraphList Trie BFSGraphMatrix Map MinHeap InsertionSort MergeSort Queue Stack QuickSort DijkstraList PrimsList",
-    "test:ci": "jest LinearSearchList BinarySearchList TwoCrystalBalls BubbleSort Queue Stack"
+    "test:ci": "jest LinearSearchList BinarySearchList TwoCrystalBalls BubbleSort Queue Stack SumRecursion"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
